<p> margin spacing corrections

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -57,7 +57,8 @@ h2 {
 p {
   font-size: 1.8rem;
   font-family: "Open Sans", sans-serif;
-  font-weight: 300; }
+  font-weight: 300;
+  margin: 10px 0px 10px; }
 
 a {
   color: #00253e; }
@@ -222,7 +223,6 @@ svg {
 
 p {
   text-align: center;
-  margin: 20px 0 0;
   line-height: 1.3; }
   p.success {
     color: #73af55; }
