--- a/src/sass/1-base/_base.sass
+++ b/src/sass/1-base/_base.sass
@@ -22,6 +22,7 @@ p
     font-size: 1.8rem
     font-family: $font-stack-open-sans
     font-weight: $light
+    margin: 10px 0px 10px
 
 a
     color: $prime-color
