--- a/src/sass/3-modules/_modules.sass
+++ b/src/sass/3-modules/_modules.sass
@@ -87,7 +87,6 @@ svg
 
 p
     text-align: center
-    margin: 20px 0 0
     line-height: 1.3
     &.success
         color: #73af55
